# SynthImage

./: README.md  pyproject.toml  setup.cfg
src/SynthImage/: augmentation.py  bad_photocopy_augmentation.py  blur_augmentation.py  brightness_augmentation.py  config.py  deform_augmentation.py  dirty_augmentation.py  dirty_rollers_augmentation.py  distort_augmentation.py  flip_augmentation.py  hue_saturation_augmentation.py  ink_bleed_augmentation.py  line_extraction.py  low_ink_augmentation.py  page_image.py  paper_texture_augmentation.py  perspective_augmentation.py  random_shadow_augmentation.py  rotate_augmentation.py  rusting_augmentation.py  scribble_augmentation.py  torn_augmentation.py  transpose_augmentation.py  utils.py  water_mark_augmentation.py
tests/: conftest.py  test_example.py  test_page_image.py
tests/augmentation/: test_aug_utils.py  test_augmentation.py  test_augmentation_image.py  test_bad_photocopy.py  test_blur.py  test_brightness.py  test_contrast.py  test_deform.py  test_dirty.py  test_dirty_rollers.py  test_distort.py  test_faxify.py  test_flip.py  test_grid_distort.py  test_horizontal_flip.py  test_hue_saturation.py  test_ink_bleed.py  test_low_ink.py  test_paper_texture.py  test_perspective.py  test_random_rain.py  test_random_shadow.py  test_rotation.py  test_rusting.py  test_scribble.py  test_sharpness.py  test_solarize.py  test_sun_flare.py  test_torn.py  test_transpose.py  test_vertical_flip.py  test_water_mark.py
tests/line_extraction/: test_extraction.py  test_modern_extraction.py  test_pecha_extraction.py
(+51 files in other folders)
